load("@nodemono2//bzl:defs.bzl", "ts_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "app_yaml_proto",
    srcs = ["app_yaml.proto"],
    strip_import_prefix = "/proto/src",
    visibility = ["//visibility:public"],
    deps = ["@com_google_protobuf//:duration_proto"],
)

proto_library(
    name = "appengine_proto",
    srcs = ["appengine.proto"],
    strip_import_prefix = "/proto/src",
    visibility = ["//visibility:public"],
    deps = [
        ":application_proto",
        ":certificate_proto",
        ":domain_mapping_proto",
        ":domain_proto",
        ":firewall_proto",
        ":instance_proto",
        ":service_proto",
        ":version_proto",
        "//proto/src/google/api:annotations_proto",
        "//proto/src/google/api:client_proto",
        "//proto/src/google/longrunning:operations_proto",
        "@com_google_protobuf//:empty_proto",
        "@com_google_protobuf//:field_mask_proto",
    ],
)

proto_library(
    name = "application_proto",
    srcs = ["application.proto"],
    strip_import_prefix = "/proto/src",
    visibility = ["//visibility:public"],
    deps = ["@com_google_protobuf//:duration_proto"],
)

proto_library(
    name = "audit_data_proto",
    srcs = ["audit_data.proto"],
    strip_import_prefix = "/proto/src",
    visibility = ["//visibility:public"],
    deps = [":appengine_proto"],
)

proto_library(
    name = "certificate_proto",
    srcs = ["certificate.proto"],
    strip_import_prefix = "/proto/src",
    visibility = ["//visibility:public"],
    deps = ["@com_google_protobuf//:timestamp_proto"],
)

proto_library(
    name = "deploy_proto",
    srcs = ["deploy.proto"],
    strip_import_prefix = "/proto/src",
    visibility = ["//visibility:public"],
    deps = ["@com_google_protobuf//:duration_proto"],
)

proto_library(
    name = "deployed_files_proto",
    srcs = ["deployed_files.proto"],
    strip_import_prefix = "/proto/src",
    visibility = ["//visibility:public"],
)

proto_library(
    name = "domain_mapping_proto",
    srcs = ["domain_mapping.proto"],
    strip_import_prefix = "/proto/src",
    visibility = ["//visibility:public"],
)

proto_library(
    name = "domain_proto",
    srcs = ["domain.proto"],
    strip_import_prefix = "/proto/src",
    visibility = ["//visibility:public"],
)

proto_library(
    name = "firewall_proto",
    srcs = ["firewall.proto"],
    strip_import_prefix = "/proto/src",
    visibility = ["//visibility:public"],
)

proto_library(
    name = "instance_proto",
    srcs = ["instance.proto"],
    strip_import_prefix = "/proto/src",
    visibility = ["//visibility:public"],
    deps = [
        "//proto/src/google/api:field_behavior_proto",
        "//proto/src/google/api:resource_proto",
        "@com_google_protobuf//:timestamp_proto",
    ],
)

proto_library(
    name = "location_proto",
    srcs = ["location.proto"],
    strip_import_prefix = "/proto/src",
    visibility = ["//visibility:public"],
    deps = ["//proto/src/google/api:field_behavior_proto"],
)

proto_library(
    name = "network_settings_proto",
    srcs = ["network_settings.proto"],
    strip_import_prefix = "/proto/src",
    visibility = ["//visibility:public"],
)

proto_library(
    name = "operation_proto",
    srcs = ["operation.proto"],
    strip_import_prefix = "/proto/src",
    visibility = ["//visibility:public"],
    deps = ["@com_google_protobuf//:timestamp_proto"],
)

proto_library(
    name = "service_proto",
    srcs = ["service.proto"],
    strip_import_prefix = "/proto/src",
    visibility = ["//visibility:public"],
    deps = [":network_settings_proto"],
)

proto_library(
    name = "version_proto",
    srcs = ["version.proto"],
    strip_import_prefix = "/proto/src",
    visibility = ["//visibility:public"],
    deps = [
        ":app_yaml_proto",
        ":deploy_proto",
        "@com_google_protobuf//:duration_proto",
        "@com_google_protobuf//:timestamp_proto",
    ],
)

ts_proto_library(
    name = "app_yaml_proto_ts",
    proto = ":app_yaml_proto",
)

ts_proto_library(
    name = "appengine_proto_ts",
    has_services = True,
    proto = ":appengine_proto",
)

ts_proto_library(
    name = "application_proto_ts",
    proto = ":application_proto",
)

ts_proto_library(
    name = "audit_data_proto_ts",
    proto = ":audit_data_proto",
)

ts_proto_library(
    name = "certificate_proto_ts",
    proto = ":certificate_proto",
)

ts_proto_library(
    name = "deploy_proto_ts",
    proto = ":deploy_proto",
)

ts_proto_library(
    name = "domain_mapping_proto_ts",
    proto = ":domain_mapping_proto",
)

ts_proto_library(
    name = "domain_proto_ts",
    proto = ":domain_proto",
)

ts_proto_library(
    name = "firewall_proto_ts",
    proto = ":firewall_proto",
)

ts_proto_library(
    name = "instance_proto_ts",
    proto = ":instance_proto",
)

ts_proto_library(
    name = "location_proto_ts",
    proto = ":location_proto",
)

ts_proto_library(
    name = "network_settings_proto_ts",
    proto = ":network_settings_proto",
)

ts_proto_library(
    name = "operation_proto_ts",
    proto = ":operation_proto",
)

ts_proto_library(
    name = "service_proto_ts",
    proto = ":service_proto",
)

ts_proto_library(
    name = "version_proto_ts",
    proto = ":version_proto",
)
