load("@rules_proto//proto:defs.bzl", "proto_library")
load("@nodemono2//bzl:defs.bzl", "ts_proto_library")

proto_library(
    name = "app_yaml_proto",
    srcs = ["app_yaml.proto"],
    visibility = ["//visibility:public"],
    deps = ["@com_google_protobuf//:duration_proto"],
)

proto_library(
    name = "appengine_proto",
    srcs = ["appengine.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "//google/api:api_proto",
        "//google/appengine/v1beta:v1beta_proto",
        "//google/longrunning:longrunning_proto",
        "@com_google_protobuf//:empty_proto",
        "@com_google_protobuf//:field_mask_proto",
    ],
)

proto_library(
    name = "application_proto",
    srcs = ["application.proto"],
    visibility = ["//visibility:public"],
    deps = ["@com_google_protobuf//:duration_proto"],
)

proto_library(
    name = "audit_data_proto",
    srcs = ["audit_data.proto"],
    visibility = ["//visibility:public"],
    deps = ["//google/appengine/v1beta:v1beta_proto"],
)

proto_library(
    name = "certificate_proto",
    srcs = ["certificate.proto"],
    visibility = ["//visibility:public"],
    deps = ["@com_google_protobuf//:timestamp_proto"],
)

proto_library(
    name = "deploy_proto",
    srcs = ["deploy.proto"],
    visibility = ["//visibility:public"],
    deps = ["@com_google_protobuf//:duration_proto"],
)

proto_library(
    name = "domain_mapping_proto",
    srcs = ["domain_mapping.proto"],
    visibility = ["//visibility:public"],
)

proto_library(
    name = "domain_proto",
    srcs = ["domain.proto"],
    visibility = ["//visibility:public"],
)

proto_library(
    name = "firewall_proto",
    srcs = ["firewall.proto"],
    visibility = ["//visibility:public"],
)

proto_library(
    name = "instance_proto",
    srcs = ["instance.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "//google/api:api_proto",
        "@com_google_protobuf//:timestamp_proto",
    ],
)

proto_library(
    name = "location_proto",
    srcs = ["location.proto"],
    visibility = ["//visibility:public"],
    deps = ["//google/api:api_proto"],
)

proto_library(
    name = "network_settings_proto",
    srcs = ["network_settings.proto"],
    visibility = ["//visibility:public"],
)

proto_library(
    name = "operation_proto",
    srcs = ["operation.proto"],
    visibility = ["//visibility:public"],
    deps = ["@com_google_protobuf//:timestamp_proto"],
)

proto_library(
    name = "service_proto",
    srcs = ["service.proto"],
    visibility = ["//visibility:public"],
    deps = ["//google/appengine/v1beta:v1beta_proto"],
)

proto_library(
    name = "version_proto",
    srcs = ["version.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "//google/appengine/v1beta:v1beta_proto",
        "@com_google_protobuf//:duration_proto",
        "@com_google_protobuf//:timestamp_proto",
    ],
)

ts_proto_library(
    name = "app_yaml_proto_ts",
    proto = ":app_yaml_proto",
)

ts_proto_library(
    name = "appengine_proto_ts",
    has_services = True,
    proto = ":appengine_proto",
)

ts_proto_library(
    name = "application_proto_ts",
    proto = ":application_proto",
)

ts_proto_library(
    name = "audit_data_proto_ts",
    proto = ":audit_data_proto",
)

ts_proto_library(
    name = "certificate_proto_ts",
    proto = ":certificate_proto",
)

ts_proto_library(
    name = "deploy_proto_ts",
    proto = ":deploy_proto",
)

ts_proto_library(
    name = "domain_mapping_proto_ts",
    proto = ":domain_mapping_proto",
)

ts_proto_library(
    name = "domain_proto_ts",
    proto = ":domain_proto",
)

ts_proto_library(
    name = "firewall_proto_ts",
    proto = ":firewall_proto",
)

ts_proto_library(
    name = "instance_proto_ts",
    proto = ":instance_proto",
)

ts_proto_library(
    name = "location_proto_ts",
    proto = ":location_proto",
)

ts_proto_library(
    name = "network_settings_proto_ts",
    proto = ":network_settings_proto",
)

ts_proto_library(
    name = "operation_proto_ts",
    proto = ":operation_proto",
)

ts_proto_library(
    name = "service_proto_ts",
    proto = ":service_proto",
)

ts_proto_library(
    name = "version_proto_ts",
    proto = ":version_proto",
)
