load("@rules_proto//proto:defs.bzl", "proto_library")
load("@nodemono2//bzl:defs.bzl", "ts_proto_library")

proto_library(
    name = "bigtable_proto",
    srcs = ["bigtable.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "//google/api:api_proto",
        "//google/bigtable/v2:v2_proto",
        "//google/rpc:rpc_proto",
        "@com_google_protobuf//:duration_proto",
        "@com_google_protobuf//:timestamp_proto",
        "@com_google_protobuf//:wrappers_proto",
    ],
)

proto_library(
    name = "data_proto",
    srcs = ["data.proto"],
    visibility = ["//visibility:public"],
    deps = ["//google/api:api_proto"],
)

proto_library(
    name = "feature_flags_proto",
    srcs = ["feature_flags.proto"],
    visibility = ["//visibility:public"],
)

proto_library(
    name = "request_stats_proto",
    srcs = ["request_stats.proto"],
    visibility = ["//visibility:public"],
    deps = ["@com_google_protobuf//:duration_proto"],
)

proto_library(
    name = "response_params_proto",
    srcs = ["response_params.proto"],
    visibility = ["//visibility:public"],
)

ts_proto_library(
    name = "bigtable_proto_ts",
    has_services = True,
    proto = ":bigtable_proto",
)

ts_proto_library(
    name = "data_proto_ts",
    proto = ":data_proto",
)

ts_proto_library(
    name = "feature_flags_proto_ts",
    proto = ":feature_flags_proto",
)

ts_proto_library(
    name = "request_stats_proto_ts",
    proto = ":request_stats_proto",
)

ts_proto_library(
    name = "response_params_proto_ts",
    proto = ":response_params_proto",
)
