load("@rules_proto//proto:defs.bzl", "proto_library")
load("@nodemono2//bzl:defs.bzl", "ts_proto_library")

proto_library(
    name = "bigtable_proto",
    srcs = ["bigtable.proto"],
    strip_import_prefix = "/proto/src",
    visibility = ["//visibility:public"],
    deps = [
        ":data_proto",
        ":request_stats_proto",
        "//proto/src/google/api:annotations_proto",
        "//proto/src/google/api:client_proto",
        "//proto/src/google/api:field_behavior_proto",
        "//proto/src/google/api:resource_proto",
        "//proto/src/google/api:routing_proto",
        "//proto/src/google/rpc:status_proto",
        "@com_google_protobuf//:duration_proto",
        "@com_google_protobuf//:timestamp_proto",
        "@com_google_protobuf//:wrappers_proto",
    ],
)

proto_library(
    name = "data_proto",
    srcs = ["data.proto"],
    strip_import_prefix = "/proto/src",
    visibility = ["//visibility:public"],
    deps = ["//proto/src/google/api:field_behavior_proto"],
)

proto_library(
    name = "feature_flags_proto",
    srcs = ["feature_flags.proto"],
    strip_import_prefix = "/proto/src",
    visibility = ["//visibility:public"],
)

proto_library(
    name = "request_stats_proto",
    srcs = ["request_stats.proto"],
    strip_import_prefix = "/proto/src",
    visibility = ["//visibility:public"],
    deps = ["@com_google_protobuf//:duration_proto"],
)

proto_library(
    name = "response_params_proto",
    srcs = ["response_params.proto"],
    strip_import_prefix = "/proto/src",
    visibility = ["//visibility:public"],
)

ts_proto_library(
    name = "bigtable_proto_ts",
    has_services = True,
    proto = ":bigtable_proto",
)

ts_proto_library(
    name = "data_proto_ts",
    proto = ":data_proto",
)

ts_proto_library(
    name = "feature_flags_proto_ts",
    proto = ":feature_flags_proto",
)

ts_proto_library(
    name = "request_stats_proto_ts",
    proto = ":request_stats_proto",
)

ts_proto_library(
    name = "response_params_proto_ts",
    proto = ":response_params_proto",
)
