load("@rules_proto//proto:defs.bzl", "proto_library")
load("@nodemono2//bzl:defs.bzl", "ts_proto_library")

proto_library(
    name = "cluster_service_proto",
    srcs = ["cluster_service.proto"],
    strip_import_prefix = "/proto/src",
    visibility = ["//visibility:public"],
    deps = [
        "//proto/src/google/api:annotations_proto",
        "@com_google_protobuf//:empty_proto",
    ],
)

ts_proto_library(
    name = "cluster_service_proto_ts",
    has_services = True,
    proto = ":cluster_service_proto",
)
