load("@rules_proto//proto:defs.bzl", "proto_library")
load("@nodemono2//bzl:defs.bzl", "ts_proto_library")

proto_library(
    name = "environment_proto",
    srcs = ["environment.proto"],
    strip_import_prefix = "/proto/src",
    visibility = ["//visibility:public"],
    deps = [
        "//proto/src/google/api:field_behavior_proto",
        "@com_google_protobuf//:any_proto",
        "@com_google_protobuf//:struct_proto",
    ],
)

proto_library(
    name = "jobs_proto",
    srcs = ["jobs.proto"],
    strip_import_prefix = "/proto/src",
    visibility = ["//visibility:public"],
    deps = [
        ":environment_proto",
        ":snapshots_proto",
        "//proto/src/google/api:annotations_proto",
        "//proto/src/google/api:client_proto",
        "@com_google_protobuf//:duration_proto",
        "@com_google_protobuf//:struct_proto",
        "@com_google_protobuf//:timestamp_proto",
    ],
)

proto_library(
    name = "messages_proto",
    srcs = ["messages.proto"],
    strip_import_prefix = "/proto/src",
    visibility = ["//visibility:public"],
    deps = [
        "//proto/src/google/api:annotations_proto",
        "//proto/src/google/api:client_proto",
        "@com_google_protobuf//:struct_proto",
        "@com_google_protobuf//:timestamp_proto",
    ],
)

proto_library(
    name = "metrics_proto",
    srcs = ["metrics.proto"],
    strip_import_prefix = "/proto/src",
    visibility = ["//visibility:public"],
    deps = [
        "//proto/src/google/api:annotations_proto",
        "//proto/src/google/api:client_proto",
        "@com_google_protobuf//:struct_proto",
        "@com_google_protobuf//:timestamp_proto",
    ],
)

proto_library(
    name = "snapshots_proto",
    srcs = ["snapshots.proto"],
    strip_import_prefix = "/proto/src",
    visibility = ["//visibility:public"],
    deps = [
        "//proto/src/google/api:annotations_proto",
        "//proto/src/google/api:client_proto",
        "@com_google_protobuf//:duration_proto",
        "@com_google_protobuf//:timestamp_proto",
    ],
)

proto_library(
    name = "streaming_proto",
    srcs = ["streaming.proto"],
    strip_import_prefix = "/proto/src",
    visibility = ["//visibility:public"],
)

proto_library(
    name = "templates_proto",
    srcs = ["templates.proto"],
    strip_import_prefix = "/proto/src",
    visibility = ["//visibility:public"],
    deps = [
        ":environment_proto",
        ":jobs_proto",
        "//proto/src/google/api:annotations_proto",
        "//proto/src/google/api:client_proto",
        "//proto/src/google/rpc:status_proto",
    ],
)

ts_proto_library(
    name = "environment_proto_ts",
    proto = ":environment_proto",
)

ts_proto_library(
    name = "jobs_proto_ts",
    has_services = True,
    proto = ":jobs_proto",
)

ts_proto_library(
    name = "messages_proto_ts",
    has_services = True,
    proto = ":messages_proto",
)

ts_proto_library(
    name = "metrics_proto_ts",
    has_services = True,
    proto = ":metrics_proto",
)

ts_proto_library(
    name = "snapshots_proto_ts",
    has_services = True,
    proto = ":snapshots_proto",
)

ts_proto_library(
    name = "streaming_proto_ts",
    proto = ":streaming_proto",
)

ts_proto_library(
    name = "templates_proto_ts",
    has_services = True,
    proto = ":templates_proto",
)
