load("@rules_proto//proto:defs.bzl", "proto_library")
load("@nodemono2//bzl:defs.bzl", "ts_proto_library")

proto_library(
    name = "aggregation_result_proto",
    srcs = ["aggregation_result.proto"],
    strip_import_prefix = "/proto/src",
    visibility = ["//visibility:public"],
    deps = [
        ":entity_proto",
        ":query_proto",
        "@com_google_protobuf//:timestamp_proto",
    ],
)

proto_library(
    name = "datastore_proto",
    srcs = ["datastore.proto"],
    strip_import_prefix = "/proto/src",
    visibility = ["//visibility:public"],
    deps = [
        ":aggregation_result_proto",
        ":entity_proto",
        ":query_profile_proto",
        ":query_proto",
        "//proto/src/google/api:annotations_proto",
        "//proto/src/google/api:client_proto",
        "//proto/src/google/api:field_behavior_proto",
        "//proto/src/google/api:routing_proto",
        "@com_google_protobuf//:timestamp_proto",
    ],
)

proto_library(
    name = "entity_proto",
    srcs = ["entity.proto"],
    strip_import_prefix = "/proto/src",
    visibility = ["//visibility:public"],
    deps = [
        "//proto/src/google/type:latlng_proto",
        "@com_google_protobuf//:struct_proto",
        "@com_google_protobuf//:timestamp_proto",
    ],
)

proto_library(
    name = "query_profile_proto",
    srcs = ["query_profile.proto"],
    strip_import_prefix = "/proto/src",
    visibility = ["//visibility:public"],
    deps = [
        "//proto/src/google/api:field_behavior_proto",
        "@com_google_protobuf//:duration_proto",
        "@com_google_protobuf//:struct_proto",
    ],
)

proto_library(
    name = "query_proto",
    srcs = ["query.proto"],
    strip_import_prefix = "/proto/src",
    visibility = ["//visibility:public"],
    deps = [
        ":entity_proto",
        "//proto/src/google/api:field_behavior_proto",
        "@com_google_protobuf//:timestamp_proto",
        "@com_google_protobuf//:wrappers_proto",
    ],
)

ts_proto_library(
    name = "aggregation_result_proto_ts",
    proto = ":aggregation_result_proto",
)

ts_proto_library(
    name = "datastore_proto_ts",
    has_services = True,
    proto = ":datastore_proto",
)

ts_proto_library(
    name = "entity_proto_ts",
    proto = ":entity_proto",
)

ts_proto_library(
    name = "query_profile_proto_ts",
    proto = ":query_profile_proto",
)

ts_proto_library(
    name = "query_proto_ts",
    proto = ":query_proto",
)
