load("@rules_proto//proto:defs.bzl", "proto_library")
load("@nodemono2//bzl:defs.bzl", "ts_proto_library")

proto_library(
    name = "datastore_proto",
    srcs = ["datastore.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "//google/api:api_proto",
        "//google/datastore/v1beta3:v1beta3_proto",
    ],
)

proto_library(
    name = "entity_proto",
    srcs = ["entity.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "//google/api:api_proto",
        "//google/type:type_proto",
        "@com_google_protobuf//:struct_proto",
        "@com_google_protobuf//:timestamp_proto",
    ],
)

proto_library(
    name = "query_proto",
    srcs = ["query.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "//google/api:api_proto",
        "//google/datastore/v1beta3:v1beta3_proto",
        "//google/type:type_proto",
        "@com_google_protobuf//:wrappers_proto",
    ],
)

ts_proto_library(
    name = "datastore_proto_ts",
    has_services = True,
    proto = ":datastore_proto",
)

ts_proto_library(
    name = "entity_proto_ts",
    proto = ":entity_proto",
)

ts_proto_library(
    name = "query_proto_ts",
    proto = ":query_proto",
)
